--- a/index.html
+++ b/index.html
@@ -244,30 +244,30 @@
                         <a href="#" class="button-like__price">Purchaise</a>
                     </div>
                     <div class="price-card">
-                        <h4 class="card-header">Website hosting</h4>
+                        <h4 class="card-header">Reseller cloud</h4>
                         <div class="price-box">
-                            <p>$10/month</p>
+                            <p>$135/month</p>
                         </div>
                         <div class="card-info__price">
-                            <p><b>2x</b> option 1</p>
+                            <p><b>5x</b> option 1</p>
                             <p><b>Free</b> option 2</p>
                             <p><b>Unlimited</b> option 3</p>
                             <p><b>Unlimited</b> option 4</p>
-                            <p><b>1x</b> option 5</p>
+                            <p><b>5x</b> option 5</p>
                         </div>
                         <a href="#" class="button-like__price">Purchaise</a>
                     </div>
                     <div class="price-card">
-                        <h4 class="card-header">Website hosting</h4>
+                        <h4 class="card-header">Dedicated hosting</h4>
                         <div class="price-box">
-                            <p>$10/month</p>
+                            <p>$235/month</p>
                         </div>
                         <div class="card-info__price">
-                            <p><b>2x</b> option 1</p>
+                            <p><b>10x</b> option 1</p>
                             <p><b>Free</b> option 2</p>
                             <p><b>Unlimited</b> option 3</p>
                             <p><b>Unlimited</b> option 4</p>
-                            <p><b>1x</b> option 5</p>
+                            <p><b>10x</b> option 5</p>
                         </div>
                         <a href="#" class="button-like__price">Purchaise</a>
                     </div>
@@ -421,7 +421,7 @@
                             <input type="text" placeholder="Name">
                             <input type="text" placeholder="Mail">
                             <br>
-                            <textarea name="" id="" cols="100" rows="10" placeholder="Message"></textarea>
+                            <textarea name="" id="" cols="100" rows="10" placeholder="Message" style="resize: none;"></textarea>
                             <br>
                             <button>Sumbit mail</button>
                         </form>
