--- a/index.html
+++ b/index.html
@@ -28,15 +28,31 @@
                     <a href="#" class="nav-link"><img src="img/Search.png" alt=""></a>   
                 </nav>
             </div>
+            <!-- <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                  <span></span>
+                </label>
+            
+                <ul class="menu__box">
+                  <li><a class="menu__item" href="#">Главная</a></li>
+                        <li><a class="menu__item" href="#">Проекты</a></li>
+                        <li><a class="menu__item" href="#">Команда</a></li>
+                        <li><a class="menu__item" href="#">Блог</a></li>
+                        <li><a class="menu__item" href="#">Контакты</a></li>
+                </ul>
+              </div> -->
         </div>
     </header>
 
 
     <section class="main-content">
         <section class="intro">
-            <div class="intro-slider">
-                <h1 class="intro-head-text">Welcome to Parallels</h1>
-                <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
+            <div class="container">
+                <div class="intro-slider">
+                    <h1 class="intro-head-text">Welcome to Parallels</h1>
+                    <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
+                </div>
             </div>
         </section>
         
@@ -105,9 +121,9 @@
                             <p>Photography</p>
                             <div class="card-liked">
                                 <img src="img/Chat.png" alt="">
-                                <p>53</p>
+                                <p>42</p>
                                 <img src="img/Heart.png" alt="">
-                                <p>230</p>
+                                <p>210</p>
                             </div>
                         </div>
                     </div>
@@ -118,14 +134,14 @@
                             <p>Photography</p>
                             <div class="card-liked">
                                 <img src="img/Chat.png" alt="">
-                                <p>53</p>
+                                <p>23</p>
                                 <img src="img/Heart.png" alt="">
-                                <p>230</p>
+                                <p>130</p>
                             </div>
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="" alt="">
+                        <img src="img/Photo2.png" alt="" class="card-info_img">
                         <div class="about-card">
                             <h4>Clean night sky</h4>
                             <p>Photography</p>
@@ -138,7 +154,7 @@
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="" alt="">
+                        <img src="img/Photo8.png" alt="" class="card-info_img">
                         <div class="about-card">
                             <h4>Clean night sky</h4>
                             <p>Photography</p>
@@ -151,7 +167,7 @@
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="" alt="">
+                        <img src="img/Photo.png" alt="" class="card-info_img">
                         <div class="about-card">
                             <h4>Clean night sky</h4>
                             <p>Photography</p>
@@ -164,7 +180,7 @@
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="" alt="">
+                        <img src="img/Photo1.png" alt="" class="card-info_img">
                         <div class="about-card">
                             <h4>Clean night sky</h4>
                             <p>Photography</p>
@@ -177,7 +193,7 @@
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="" alt="">
+                        <img src="img/Photo2.png" alt="" class="card-info_img">
                         <div class="about-card">
                             <h4>Clean night sky</h4>
                             <p>Photography</p>
@@ -190,7 +206,7 @@
                         </div>
                     </div>
                     <div class="card-info">
-                        <img src="" alt="">
+                        <img src="img/Photo4.png" alt="" class="card-info_img">
                         <div class="about-card">
                             <h4>Clean night sky</h4>
                             <p>Photography</p>
