--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="/img/Mount.jpg" alt="">
+                    <img src="/img/sea.jpg" alt="">
                 </div>
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="/img/Tree.jpg" alt="">
+                    <img src="/img/forest.jpg" alt="">
                 </div>
             </div>
 
@@ -437,7 +437,7 @@
         
         <section class="do-you-like">
             <div class="container">
-                <div class="liked_container_xs">
+                <div class="liked_container">
                     <h2>YOU LOOKED OVER 6000 PX</h2>
                     <P>That's Great!</P>
                 </div>
