--- a/index.html
+++ b/index.html
@@ -27,20 +27,6 @@
                     <a href="#" class="nav-link"><img src="img/Search.png"  alt=""></a>   
                 </nav>
             </div>
-            <!-- <div class="hamburger-menu">
-                <input id="menu__toggle" type="checkbox" />
-                <label class="menu__btn" for="menu__toggle">
-                  <span></span>
-                </label>
-            
-                <ul class="menu__box">
-                  <li><a class="menu__item" href="#">Главная</a></li>
-                        <li><a class="menu__item" href="#">Проекты</a></li>
-                        <li><a class="menu__item" href="#">Команда</a></li>
-                        <li><a class="menu__item" href="#">Блог</a></li>
-                        <li><a class="menu__item" href="#">Контакты</a></li>
-                </ul>
-              </div> -->
         </div>
     </header>
 
@@ -51,22 +37,22 @@
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="/img/Intro.png" alt="">
+                    <img src="img/Intro.png" alt="">
                 </div>
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="/img/Love.jpg" alt="">
+                    <img src="img/Love.jpg" alt="">
                 </div>
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="/img/sea.jpg" alt="">
+                    <img src="img/sea.jpg" alt="">
                 </div>
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="/img/forest.jpg" alt="">
+                    <img src="img/forest.jpg" alt="">
                 </div>
             </div>
 
