--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="img/Intro.png" alt="">
+                    <img src="img/slider1.jpg" alt="">
                 </div>
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="img/Love.jpg" alt="">
+                    <img src="img/slider2.jpg" alt="">
                 </div>
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="img/sea.jpg" alt="">
+                    <img src="img/slider3.jpg" alt="">
                 </div>
                 <div class="slider_item">
                     <h1 class="intro-head-text">Welcome to Parallels</h1>
                     <h2 class="intro-subhead-text">Clean Responsive Parallax Theme</h2>
-                    <img src="img/forest.jpg" alt="">
+                    <img src="img/slider4.jpg" alt="">
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 <div class="our-services__info">
                     <div class="our-services__card">
                         <div class="card-img">
-                            <img src="img/Browser.png"  alt="">
+                            <img src="img/comand.png"  alt="">
                         </div>
                         <h3 class="card-text">WebDesign</h3>
                         <p class="card-text__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, hic! Magnam molestiae odit provident</p>
@@ -103,7 +103,6 @@
                     <button class="button_like">Purchaise</button>
                     <button class="button_like">Follow</button>
                 </div>
-    
             </div>
         </section>
     
