--- a/index.html
+++ b/index.html
@@ -11,20 +11,36 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <div>
+                <div class="header__body">
                     <a href="#" class="header-logo">
                         <img src="img/Logo.png" alt="">
                         <span class="text-regular">Parallels</span>
                     </a>
                 </div>
+                <div class="header__burger">
+                    <span></span>
+                </div>
                 <nav class="navbar">
-                    <a href="#" class="nav-link">Home</a>
-                    <a href="#" class="nav-link">Services</a>
-                    <a href="#" class="nav-link">Portfolio</a>
-                    <a href="#" class="nav-link">Pricing</a>
-                    <a href="#" class="nav-link">About</a>
-                    <a href="#" class="nav-link">Contact</a>
-                    <a href="#" class="nav-link"><img src="img/Search.png"  alt=""></a>   
+                    <ul class="nav__list">
+                        <li>
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+                        <li>                    
+                            <a href="#" class="nav-link">Services</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">About</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
                 </nav>
             </div>
         </div>
