--- a/index.html
+++ b/index.html
@@ -240,9 +240,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab__content" id="ui-design-tab-content">
-                        
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione facilis quam sapiente harum, at consectetur itaque provident et odio eveniet autem cupiditate nulla in architecto quis nihil error inventore nisi!</p>
+                    <div class="tab__content ui-design" id="ui-design-tab-content">
+                        <div class="ui-design_img">
+                            <img src="/img/Photo2.png" alt="">
+                        </div>
+                        <div class="ui-design_text">
+                            <p>Почему он используется?Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).</p>
+
+                        </div>
+                    </div>
+                    <div class="prototype" id="prototype-tab-content">
+                        <div class="video">
+                            <iframe src="https://www.youtube.com/embed/WGIzvVwUfYs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div class="photography" id="photography-tab-content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi maiores numquam illum quasi porro perferendis rem ipsa ducimus eveniet soluta, esse, quo atque cumque earum autem maxime facilis? Asperiores, hic!Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi maiores numquam illum quasi porro perferendis rem ipsa ducimus eveniet soluta, esse, quo atque cumque earum autem maxime facilis? Asperiores, hic!Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi maiores numquam illum quasi porro perferendis rem ipsa ducimus eveniet soluta, esse, quo atque cumque earum autem maxime facilis? Asperiores, hic!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi maiores numquam illum quasi porro perferendis rem ipsa ducimus eveniet soluta, esse, quo atque cumque earum autem maxime facilis? Asperiores, hic!Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi maiores numquam illum quasi porro perferendis rem ipsa ducimus eveniet soluta, esse, quo atque cumque earum autem maxime facilis?Asperiores, hic!</p>
+
                     </div>
             </div>
                 <div >
